Se maqueta el navbar y se empieza con la maquetación del slider principal

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <header>
-        <h1>Movies Start</h1>
+        <nav class="navbar">
+            <ul>
+                <li class="navbar-item"><a href="">Login</a></li>
+                <li class="navbar-item"><a href="">About</a></li>
+                <li class="navbar-item"><a href="">Search</a></li>
+            </ul>
+        </nav>
+        <main class="main">
+            <section class="main-container--slider">
+                <div class="slider-movies">
+                    <div class="slider-img">
+                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
+                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
+                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
+                    </div>
+                </div>
+            </section>
+        </main>
     </header>
     <script src="./src/secret.js"></script>
     <script src="./src/main.js"></script>
