Se maqueta el slider de peliculas principales, se coloca un link con imagenes random, se debe cambiar por las imagenes de peliculas más populares, con la descripción y calificación de la pelicula

--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
         </nav>
         <main class="main">
             <section class="main-container--slider">
-                <div class="slider-movies">
-                    <div class="slider-img">
-                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
-                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
-                        <img src="" alt="Pelicula popular con descripción" class="slider-img--item">
-                    </div>
-                </div>
+                <section class="slider-movies">        
+                    <ul class="slider-items">
+                        <li class="slider-img">
+                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img"></img>
+                        </li>
+                        <li class="slider-img">
+                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img">
+                        </li>
+                        <li class="slider-img">
+                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img"></img>
+                        </li>
+                    </ul>
+                </section>
+            </section>
+            <section class="destacados">
+                
             </section>
         </main>
     </header>
