Se agrega en el slider algunas de las peliculas populares, ademas se maqueta las cards que contendran las peliculas más populares del día, falta agregarle a dichas cards, los estilos y la respectiva información consumida desde la API, en el slider falta agregar un texto la ultima parte(fondo negro)y hacer que cambien cada semana de acuerdo a las peliculas favoritas de esa semana

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         </nav>
         <main class="main">
             <section class="main-container--slider">
-                <section class="slider-movies">        
+                <section class="slider-movies">
                     <ul class="slider-items">
                         <li class="slider-img">
-                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img"></img>
+                            <img src="https://image.tmdb.org/t/p/w500/5PnypKiSj2efSPqThNjTXz8jwOg.jpg" alt="imagen de pelicula más popular" class="item-img"></img>
                         </li>
                         <li class="slider-img">
-                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img">
+                            <img src="https://image.tmdb.org/t/p/w500//odJ4hx6g6vBt4lBWKFD1tI8WS4x.jpg" alt="imagen de pelicula más popular" class="item-img">
                         </li>
                         <li class="slider-img">
-                            <img src="https://picsum.photos/300/400?random" alt="imagen de pelicula más popular" class="item-img"></img>
+                            <img src="https://image.tmdb.org/t/p/w500/8Z8dVGTn3OhX1AR49tgvh89i79G.jpg" alt="imagen de pelicula más popular" class="item-img"></img>
                         </li>
                     </ul>
                 </section>
             </section>
-            <section class="destacados">
-                
+            <section class="destacados" id="destacados">
+                <h2 class="destacados-title">DESTACADOS</h2>
             </section>
         </main>
     </header>
