--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <title>Cine</title>
 </head>
 <body>
@@ -32,8 +35,9 @@
                     </ul>
                 </section>
             </section>
-            <section class="destacados" id="destacados">
-                <h2 class="destacados-title">DESTACADOS</h2>
+            <h2 class="destacados-title">DESTACADOS</h2>
+            <section class=" movie-container--slider" id="destacados">
+                
             </section>
         </main>
     </header>
