Se agrega la sipnosis en las cards de oeliculas, queda aregar el boton de ver más en las cards de peliculas, el cual nos llevara a una pestaña más detallada de la pelicula, adicionalmente se crea la barra de busqueda de categoria, lo proxiomo es capturar el texto que se escriba para poder buscar las categorias

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0182453746.js" crossorigin="anonymous"></script>
     <title>Cine</title>
 </head>
 <body>
@@ -38,6 +39,13 @@
             <h2 class="destacados-title">DESTACADOS</h2>
             <section class=" movie-container--slider" id="destacados">
                 
+            </section>
+            <section>
+                <h3 class="categorias-title">CATEGORIAS</h3>
+                <div class="buscar" >
+                    <input type="text" name="buscar" id="buscar" placeholder="buscar categoria">
+                    <span class="btn"><i class="fa-solid fa-magnifying-glass"></i></span>
+                </div>
             </section>
         </main>
     </header>
