Se agrega lo botones de las categorias, se debe generar el ancla para que cuando se le de click a la categoria nos abra una nueva pagina con todas las peliculas de esa categoria, se debe crear el HTML de esa pagina.

--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
             <section class=" movie-container--slider" id="destacados">
                 
             </section>
-            <section>
+            <section class="categorias" id="categorias">
                 <h3 class="categorias-title">CATEGORIAS</h3>
-                <div class="buscar" >
-                    <input type="text" name="buscar" id="buscar" placeholder="buscar categoria">
-                    <span class="btn"><i class="fa-solid fa-magnifying-glass"></i></span>
-                </div>
+            
             </section>
         </main>
     </header>
